# FaceRecognizeOnnx

./: .gitignore  CMakeLists.txt  GPU_BUILD.md  README.md  test_so.cpp
.cursor/: rules.mdc
java_example/: FaceRecognitionJNI.java
models/: README.md
src/: JniInterface.cpp  JniInterface.h  benchmark_pure_inference.cpp  face_detector.cpp  face_detector.h  face_recognizer.cpp  face_recognizer.h  main.cpp  test_jni.cpp
